--- a/frontend/src/pages/Pokemon/PokemonMenu/SearchMenu.css
+++ b/frontend/src/pages/Pokemon/PokemonMenu/SearchMenu.css
@@ -6,6 +6,7 @@
 .search-menu {  
     pointer-events: auto;
     position: relative;
+    margin-bottom: 80px;
 }
 .search-menu h3 {
     margin-block-start: 0px;
