--- a/frontend/src/pages/Pokemon/PokemonMenu/SortOverlay.css
+++ b/frontend/src/pages/Pokemon/PokemonMenu/SortOverlay.css
@@ -77,6 +77,7 @@
     max-height: clamp(8px, 15px, 20px);
     position: relative;
     z-index: 1006;
+    margin-left: 1px;
 }
 
 .sort-list {
